tests have been fixed minor correction